--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -1,15 +1,19 @@
-.jh-banner {
+.jh-banner{
     color: black;
     text-align: right;
     padding: 32px;
     border-bottom: solid 3px black;
     display: flex;
+    flex-direction: column;
     flex: 2 1;
-    justify-content: flex-end;
-    align-items: center;
+    align-items: flex-end;
 }
 .jh-logo{
     width:5rem;
     height: 5rem;
     margin-right: 3rem;
+}
+
+.jh-banner-row{
+    display: flex;
 }
