--- a/src/styles/PlantItem.css
+++ b/src/styles/PlantItem.css
@@ -2,6 +2,7 @@
 	height: 220px;
 	width: 220px;
 	border-radius: 20px;
+	cursor: pointer;
 }
 
 .jh-plant-item {
@@ -11,4 +12,14 @@
 	justify-content: center;
 	flex-direction: column;
 	text-transform: capitalize;
+	cursor: pointer;
+}
+
+.jh-plant-item-cover:hover{
+	transform:scale(1.05,1.05);
+	box-shadow: 0.5rem 0.5rem .5rem grey;
+}
+
+.water-sun{
+	cursor: pointer;
 }
